--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "start": "npm run build && node ./server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "engines": {
+    "node": "12.22.1"
+  }
 }
