--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Sprint 1",
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "^1.0.2",
-    "@parcel/config-default": "^2.5.0",
-    "parcel": "^2.5.0"
+    "@anikin/parcel-transformer-handlebars": "1.0.2",
+    "@parcel/config-default": "2.5.0",
+    "parcel": "2.5.0"
   },
   "scripts": {
     "dev": "parcel --no-cache ./src/pages/index.hbs",
@@ -15,7 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "4.18.1"
   },
   "engines": {
     "node": "12.22.1"
