--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.18.1",
+    "express-history-api-fallback": "2.2.1",
     "nanoid": "4.0.0"
   }
 }
