--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,28 @@
   publish = "dist"
   command = "npm run build"
   
+[[redirects]]
+  from = "/chat"
+  to = "/"
+  status = 200
+
+[[redirects]]
+  from = "/signup"
+  to = "/"
+  status = 200
+
+[[redirects]]
+  from = "/profile"
+  to = "/"
+  status = 200
+
+[[redirects]]
+  from = "/edit-password"
+  to = "/"
+  status = 200
+
+[[redirects]]
+  from = "/edit-profile"
+  to = "/"
+  status = 200
+  
