--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,16 @@
   "compilerOptions": {
     "target": "es2017",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "commonjs",                                /* Specify what module code is generated. */
-    "typeRoots": ["node_modules/@types", "typings/app.d.ts"],
     "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
+    "typeRoots": ["node_modules/@types", "typings/app.d.ts"],
+    "sourceMap": true,                                   /* Create source map files for emitted JavaScript files. */
+    "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
+    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
+    "strict": true,                                      /* Enable all strict type-checking options. */
     "noImplicitAny": true,                               /* Enable error reporting for expressions and declarations with an implied `any` type.. */
+    "strictNullChecks": true,                            /* When type checking, take into account `null` and `undefined`. */
     "noUnusedLocals": true,                              /* Enable error reporting when a local variables aren't read. */
     "noUnusedParameters": true,                          /* Raise an error when a function parameter isn't read */
-    "sourceMap": true,                                   /* Create source map files for emitted JavaScript files. */
-    "strictNullChecks": true,                            /* When type checking, take into account `null` and `undefined`. */
-    "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables `allowSyntheticDefaultImports` for type compatibility. */
-    "strict": true,                                      /* Enable all strict type-checking options. */
-    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-    "forceConsistentCasingInFileNames": true            /* Ensure that casing is correct in imports. */
+    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   }
 }
