--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "es2016",                                  
+    "target": "es2017",                                  
     "module": "commonjs",                            
     "baseUrl": "./src",                              
     "typeRoots": ["node_modules/@types", "typings/app.d.ts"],
@@ -9,10 +9,10 @@
     "esModuleInterop": true,                     
     "forceConsistentCasingInFileNames": true,          
     "strict": true,                                
-    "noImplicitAny": true,                               /* Enable error reporting for expressions and declarations with an implied `any` type.. */
-    "strictNullChecks": true,                            /* When type checking, take into account `null` and `undefined`. */
-    "noUnusedLocals": true,                              /* Enable error reporting when a local variables aren't read. */
-    "noUnusedParameters": true,                          /* Raise an error when a function parameter isn't read */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "noImplicitAny": true,                         
+    "strictNullChecks": true,                 
+    "noUnusedLocals": true,                  
+    "noUnusedParameters": true,            
+    "skipLibCheck": true     
   }
 }
