add folder public for images and fonts, corrected typos and types variables

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "routes": "./src/routes",
     "types": "./src/types",
     "components": "./src/components",
-    "img": "./src/image",
+    "img": "./public/image",
     "data": "./src/data",
     "variables": "./src/colors",
     "utils": "./src/utils",
