--- a/package.json
+++ b/package.json
@@ -15,14 +15,39 @@
     "postcss-nested": "5.0.6",
     "stylelint": "14.9.1",
     "stylelint-config-standard": "26.0.0",
-    "typescript": "4.7.3"
+    "typescript": "4.7.3",
+    "@babel/core": "7.18.13",
+    "@babel/preset-env": "7.18.10",
+    "@babel/preset-typescript": "7.18.6",
+    "@types/jest": "28.1.7",
+    "babel-jest": "28.1.3",
+    "babel-loader": "8.2.5",
+    "clean-webpack-plugin": "4.0.0",
+    "css-loader": "6.7.1",
+    "cssnano": "5.1.13",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.1",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.3",
+    "lint-staged": "13.0.3",
+    "mini-css-extract-plugin": "2.6.1",
+    "mocha": "10.0.0",
+    "postcss-loader": "7.0.1",
+    "ts-jest": "28.0.8",
+    "ts-loader": "9.3.1",
+    "webpack": "5.74.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.10.0"
   },
   "scripts": {
-    "dev": "parcel src/index.html --no-source-maps --no-cache ",
-    "build": "parcel build ./src/index.html",
-    "start": "npm run build && node ./backend/server.js",
-    "lint": "npx eslint .",
-    "style-lint": "npx stylelint \"**/*.css\" --fix"
+    "build": "webpack --mode production",
+    "dev": "webpack serve",
+    "start": "node ./backend/server.js",
+    "lint:ts": "npx eslint .",
+    "lint:style": "npx stylelint \"**/*.css\" --fix",
+    "docker": "docker build -t messenger .",
+    "prepare": "husky install"
   },
   "alias": {
     "pages": "./src/pages",
@@ -43,7 +68,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.18.1",
+    "core-js": "3.24.1",
     "express-history-api-fallback": "2.2.1",
+    "express-rate-limit": "6.5.1",
     "nanoid": "4.0.0"
+  },
+  "lint-staged": {
+    "*.ts": "npm run lint:ts",
+    "*.css": "npm run lint:style"
   }
 }
