--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "dist",
     "target": "es2017",                                  
     "module": "commonjs",                            
-    "baseUrl": "./src",                              
+    "baseUrl": "src",                              
     "typeRoots": ["node_modules/@types", "typings/app.d.ts"],
     "sourceMap": true,  
     "esModuleInterop": true,                     
