--- a/package.json
+++ b/package.json
@@ -3,39 +3,46 @@
   "version": "1.0.0",
   "description": "-",
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "1.0.9",
-    "@types/node": "18.0.0",
-    "@typescript-eslint/eslint-plugin": "5.28.0",
-    "@typescript-eslint/parser": "5.28.0",
-    "autoprefixer": "10.4.8",
-    "eslint": "8.18.0",
-    "handlebars": "4.7.7",
-    "parcel": "2.5.0",
-    "parcel-plugin-handlebars-precompile": "1.0.2",
-    "postcss-nested": "5.0.6",
-    "stylelint": "14.9.1",
-    "stylelint-config-standard": "26.0.0",
-    "typescript": "4.7.3",
+    "@anikin/parcel-transformer-handlebars": "1.0.2",
     "@babel/core": "7.18.13",
     "@babel/preset-env": "7.18.10",
     "@babel/preset-typescript": "7.18.6",
-    "@types/jest": "28.1.7",
-    "babel-jest": "28.1.3",
+    "@types/chai": "4.3.3",
+    "@types/jsdom": "20.0.0",
+    "@types/mocha": "10.0.0",
+    "@types/node": "18.0.0",
+    "@types/proxyquire": "1.3.28",
+    "@types/sinon": "10.0.13",
+    "@typescript-eslint/eslint-plugin": "5.28.0",
+    "@typescript-eslint/parser": "5.28.0",
+    "autoprefixer": "10.4.8",
     "babel-loader": "8.2.5",
+    "chai": "4.3.6",
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "6.7.1",
     "cssnano": "5.1.13",
+    "eslint": "8.18.0",
+    "global-jsdom": "8.2.0",
+    "handlebars": "4.7.7",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "28.1.3",
-    "jest-environment-jsdom": "28.1.3",
+    "ignore-styles": "5.0.1",
+    "jsdom": "20.0.1",
     "lint-staged": "13.0.3",
     "mini-css-extract-plugin": "2.6.1",
     "mocha": "10.0.0",
+    "parcel": "1.12.4",
+    "parcel-plugin-handlebars-precompile": "1.0.2",
     "postcss-loader": "7.0.1",
+    "postcss-nested": "5.0.6",
+    "sinon": "14.0.1",
+    "stylelint": "14.9.1",
+    "stylelint-config-standard": "26.0.0",
     "ts-jest": "28.0.8",
     "ts-loader": "9.3.1",
+    "ts-node": "10.9.1",
+    "typescript": "4.8.4",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.10.0"
@@ -47,6 +54,7 @@
     "lint:ts": "npx eslint .",
     "lint:style": "npx stylelint \"**/*.css\" --fix",
     "docker": "docker build -t messenger .",
+    "test": "mocha --require ts-node/register src/**/*.spec.ts",
     "prepare": "husky install"
   },
   "alias": {
@@ -67,8 +75,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.1",
     "core-js": "3.24.1",
+    "express": "4.18.1",
     "express-history-api-fallback": "2.2.1",
     "express-rate-limit": "6.5.1",
     "nanoid": "4.0.0"
