--- a/package.json
+++ b/package.json
@@ -45,11 +45,14 @@
     "typescript": "4.8.4",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.10.0"
+    "webpack-dev-server": "4.10.0",
+    "webpack-merge": "5.8.0",
+    "cross-env": "7.0.3",
+    "style-loader": "3.3.0"
   },
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack serve",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
+    "dev": "cross-env NODE_ENV=development webpack serve --config webpack.dev.js",
     "start": "node ./backend/server.js",
     "lint:ts": "npx eslint .",
     "lint:style": "npx stylelint \"**/*.css\" --fix",
